fix custom scaleRatio load wrong position

--- a/keyboard.css
+++ b/keyboard.css
@@ -66,7 +66,7 @@ img {
 }
 #control {
     position: absolute;
-    top: 650px;
+    top: 580px;
 }
 input {
     width: 100px;
